[tool.poetry]
name = "aoc_2022_day_01"
version = "0.1.0"
description = ""
authors = ["Luis Capella <enriquecapella@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
